adding some minor changes to index2. adding Readme file

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -45,7 +45,7 @@
 
     {% else %}
       <p>The game has not yet started.</p>
-      <form method="post" action="{% url 'start_game' %}">
+      <form method="post">
         {% csrf_token %}
         <button type="submit">Start Game</button>
       </form>
