Changes in templates. Fixing some errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,5 +22,5 @@
       <li>No elements available</li>
     {% endfor %}
   </ul>
-  <a href="{% url 'game' %}" class="btn btn-primary">Start a new game</a>
+  <a>Start a new game</a>
 {% endblock %}
