--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
     <meta charset="UTF-8">
@@ -10,8 +11,8 @@
         <h1>Gigamon</h1>
         <nav>
             <ul>
-                <li><a href="{% url 'index' %}">Home</a></li>
-                <li><a href="{% url 'game' %}">Play Game</a></li>
+                <li>Something yet undiscovered</li>
+                <li>Something better yet undiscovered</li>
             </ul>
         </nav>
     </header>
