Adding a string represantation in to models. Working with template to display images.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,9 +9,9 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{% url 'index' %}">Home</a></li>
-        <li><a href="{% url 'upload_wizard' %}">Upload Wizard Image</a></li>
-        <li><a href="{% url 'upload_element' %}">Upload Element Image</a></li>
+        <li><a href="{% url 'elementals_app:index' %}">Home</a></li>
+        <li><a href="{% url 'elementals_app:upload_wizard' %}">Upload Wizard Image</a></li>
+        <li><a href="{% url 'elementals_app:upload_element' %}">Upload Element Image</a></li>
       </ul>
     </nav>
   </header>
