--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 
     <h1>Wizard Images</h1>
     {% for wizard in wizard_images %}
+        <li>wizard</li>
       <img src="{{ wizard.image.url }}" alt="{{ wizard.wizard_type }}">
     {% endfor %}
   </ul>
