Clearing unnessecary code. Finding bug with static files which don't work.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'elementals_app:index' %}">Home</a></li>
-        <li><a href="{% url 'elementals_app:upload_wizard' %}">Upload Wizard Image</a></li>
-        <li><a href="{% url 'elementals_app:upload_element' %}">Upload Element Image</a></li>
+        <li><a href="{% url 'elementals_app:image_upload' %}">Upload Elements and Entity Images</a></li>
       </ul>
     </nav>
   </header>
