--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,17 @@
     {% endfor %}
 
     <h1>Wizard Images</h1>
-    {% for wizard in wizard_images %}
+    {% for wizard in entity_images %}
         <li>wizard</li>
+        <p>{{ forloop.counter }}</p>
       <img src="{{ wizard.image.url }}" alt="{{ wizard.wizard_type }}">
+
     {% endfor %}
   </ul>
   <p>Here are the available elements:</p>
   <ul>
     {% for element in element_images %}
-      <li>{{ element }}</li>
+      <li>{{ element.image.url }}</li>
     {% empty %}
       <li>No elements available</li>
     {% endfor %}
