updating files. Styles and displaying images are fixed! Yupiiii

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Elementals War</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <title>Elementals War</title>
 </head>
 <body>
   <header>
